My Website Final Upload

--- a/jj-site/public/404.html
+++ b/jj-site/public/404.html
@@ -5,20 +5,20 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>404 Page not found | Jen M Jones</title>
+<title>404 Page not found | Jen M. Jones Portfolio</title>
 <meta name="keywords" content="">
 <meta name="description" content="Exploring the rise and impact of textile mills.">
 <meta name="author" content="Jen Jones">
-<link rel="canonical" href="http://jenmjones.com/404.html">
+<link rel="canonical" href="https://jenmjones.com/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.f49d66caae9ea0fd43f21f29e71a8d3e284517ed770f2aa86fa012953ad3c9ef.css" integrity="sha256-9J1myq6eoP1D8h8p5xqNPihFF&#43;13Dyqob6ASlTrTye8=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://jenmjones.com/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://jenmjones.com/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://jenmjones.com/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://jenmjones.com/apple-touch-icon.png">
-<link rel="mask-icon" href="http://jenmjones.com/safari-pinned-tab.svg">
+<link rel="icon" href="https://jenmjones.com/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://jenmjones.com/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://jenmjones.com/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://jenmjones.com/apple-touch-icon.png">
+<link rel="mask-icon" href="https://jenmjones.com/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://jenmjones.com/404.html">
+<link rel="alternate" hreflang="en" href="https://jenmjones.com/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -27,8 +27,8 @@
         }
 
     </style>
-</noscript><meta property="og:url" content="http://jenmjones.com/404.html">
-  <meta property="og:site_name" content="Jen M Jones">
+</noscript><meta property="og:url" content="https://jenmjones.com/404.html">
+  <meta property="og:site_name" content="Jen M. Jones Portfolio">
   <meta property="og:title" content="404 Page not found">
   <meta property="og:description" content="Exploring the rise and impact of textile mills.">
   <meta property="og:locale" content="en-us">
@@ -44,34 +44,34 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://jenmjones.com/" accesskey="h" title="Jen M Jones (Alt + H)">Jen M Jones</a>
+            <a href="https://jenmjones.com/" accesskey="h" title="Jen M. Jones Portfolio (Alt + H)">Jen M. Jones Portfolio</a>
             <div class="logo-switches">
             </div>
         </div>
         <ul id="menu">
             <li>
-                <a href="http://jenmjones.com/" title="Home">
+                <a href="https://jenmjones.com/" title="Home">
                     <span>Home</span>
                 </a>
             </li>
             <li>
-                <a href="http://jenmjones.com/blog.html" title="Blog">
+                <a href="https://jenmjones.com/blog/" title="Blog">
                     <span>Blog</span>
                 </a>
             </li>
             <li>
-                <a href="http://jenmjones.com/about.html" title="About">
+                <a href="https://jenmjones.com/about/" title="About">
                     <span>About</span>
                 </a>
             </li>
             <li>
-                <a href="http://jenmjones.com/cv.html" title="CV">
+                <a href="https://jenmjones.com/cv/" title="CV">
                     <span>CV</span>
                 </a>
             </li>
             <li>
-                <a href="http://jenmjones.com/research.html" title="Research Projects">
-                    <span>Research Projects</span>
+                <a href="https://jenmjones.com/research/" title="Research">
+                    <span>Research</span>
                 </a>
             </li>
         </ul>
@@ -82,7 +82,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://jenmjones.com/">Jen M Jones</a></span> · 
+        <span>&copy; 2025 <a href="https://jenmjones.com/">Jen M. Jones Portfolio</a></span> · 
 
     <span>
         Powered by
